--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "css-loader": "^3.5.3",
+    "immer": "^6.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "style-loader": "^1.2.1",
     "styled-components": "^5.1.0"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@storybook/react": "^5.3.19",
