--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "css-loader": "^3.5.3",
     "immer": "^6.0.9",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -28,7 +29,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "style-loader": "^1.2.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "url-loader": "^4.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
