--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "css-loader": "^3.5.3",
+    "framer-motion": "^1.11.0",
     "immer": "^6.0.9",
     "moment": "^2.26.0",
     "react": "^16.13.1",
