--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "css-loader": "^3.5.3",
+    "firebase": "^7.16.1",
     "framer-motion": "^1.11.0",
     "immer": "^6.0.9",
     "lodash": "^4.17.15",
