--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^27.1.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@date-io/dayjs": "^1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
     "axios": "^0.19.2",
     "css-loader": "^3.5.3",
     "dayjs": "^1.10.4",
@@ -56,5 +60,6 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "proxy": "https://us-central1-moim-app.cloudfunctions.net/api"
 }
