--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-input-autosize": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-textarea-autosize": "^8.3.2",
