--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.10.4",
     "firebase": "^7.16.1",
     "framer-motion": "^1.11.0",
+    "history": "^4.10.1",
     "immer": "^6.0.9",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
