--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,13 @@
     "immer": "^6.0.9",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-dom": "^16.13.1",
     "react-input-autosize": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-textarea-autosize": "^8.3.2",
+    "react-toastify": "^8.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
