--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: "frontend"
 
     strategy:
       matrix:
@@ -21,18 +24,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
 
       - name: Dependencies
         run: |
           npm install
-        working-directory: ./frontend
 
       - name: Build
         run: |
           npm run build
-        working-directory: ./frontend
 
       - name: Deploy
         run: |
           firebase deploy
-        working-directory: ./frontend
