--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,16 +12,13 @@ jobs:
     defaults:
       run:
         working-directory: "frontend"
-
     strategy:
       matrix:
-        node-version: [12]
-
+        node-version: [12.x]
     steps:
       - uses: actions/checkout@v2
-
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
