--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: "package-lock.json"
+          cache-dependency-path: "frontend/package-lock.json"
 
       - name: Dependencies
         run: |
