--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "react": "^17.0.2",
+    "react-animated-numbers": "^0.9.0",
     "react-dom": "^16.13.1",
     "react-input-autosize": "^3.0.0",
     "react-redux": "^7.2.0",
