--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.26.0",
     "react": "^17.0.2",
     "react-animated-numbers": "^0.9.0",
+    "react-canvas-confetti": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-input-autosize": "^3.0.0",
     "react-redux": "^7.2.0",
